<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newListName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/naslov_liste" />

        <Button
            android:id="@+id/buttonOkNewList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ok" />

    </LinearLayout>
    <TextView
        android:id="@+id/naslovNewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/naslov"
        android:textSize="25sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_list"
        android:textSize="20sp"
        />
    <RadioGroup
        android:id="@+id/newListRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/sharedListYes"
        >
        <RadioButton
            android:id="@+id/sharedListYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"

            />
        <RadioButton
            android:id="@+id/sharedListNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_weight="4"
            >

            <Button
                android:id="@+id/newListHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/home"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_weight="1"
            >

        </LinearLayout>

        <Button
            android:id="@+id/buttonSaveList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:text="@string/save"

            />
    </LinearLayout>
</LinearLayout>