<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/welcomeUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="center"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonNewList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_list"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            />
        <Button
            android:id="@+id/buttonSeeList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/see_my_lists"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/welcomeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/welcomeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_gravity="center"
        />
</LinearLayout>